; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-texturecube.c_gs_cubetexture_get_size.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-texturecube.c_gs_cubetexture_get_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gs_texture_cube = type { i32 }

@.str = private unnamed_addr constant [24 x i8] c"gs_cubetexture_get_size\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gs_cubetexture_get_size(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca %struct.gs_texture_cube*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = bitcast i32* %5 to %struct.gs_texture_cube*
  store %struct.gs_texture_cube* %6, %struct.gs_texture_cube** %4, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @is_texture_cube(i32* %7, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %15

11:                                               ; preds = %1
  %12 = load %struct.gs_texture_cube*, %struct.gs_texture_cube** %4, align 8
  %13 = getelementptr inbounds %struct.gs_texture_cube, %struct.gs_texture_cube* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* %2, align 4
  br label %15

15:                                               ; preds = %11, %10
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local i32 @is_texture_cube(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
